Fix spacing issues

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Inter|Fraunces);
 /*
-Theme Name: Vero simple 
-Theme URI: https://github.com/veronisab/vero-simple-wptheme
+Theme Name: Vero simple theme
+Theme URI: https://veronisab.com
 Author: Veronica Ulrikkeholm
-Author URI: http://veronisab.github.io
+Author URI: http://veronisab.com
 Description: A super simple theme making it easy to create websites for small clients.
 Version: 1.0
 */
@@ -69,14 +69,14 @@ pre {
 }
 /* Links */
 a {
-  color: var(--main-color);
+  color: #000;
   transition: color 0.3s ease-in-out;
   text-decoration: none;
 }
 a:hover,
 a:focus,
 a:active {
-  color: var(--darkblue);
+  color: var(--main-color);
 }
 /* Alignment */
 .alignleft {
@@ -100,19 +100,9 @@ a:active {
 /* Header */
 
 header {
-  background: transparent;
-  margin-bottom: 40px;
-}
-
-header .gravatar {
-  overflow: hidden;
-  width: 100px;
-  height: 100px;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  margin: 0;
-  float: right;
+  padding: 2px;
+  position: fixed;
+	top: 40px;
 }
 
 header nav {
@@ -140,24 +130,20 @@ header nav ul li {
 
 /* containers */
 main {
-  margin: 0;
-}
-
-.sticky {
-	position: fixed;
-	top: 40px;
+  height: 100vh;
+  display: grid;
+  place-content: center;
+  margin-top: 100px;
 }
 
 .homepage {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  display: grid;
+  place-content: center;
 }
+
 .content {
   margin: 30px 300px;
   padding: 30px;
-  height: 100vh;
 }
 
 footer {
@@ -165,8 +151,12 @@ footer {
   color: #ccc;
   padding: 20px;
   text-align: center;
-  margin-top: auto;
+  position:relative;
+  bottom: 0;
+  left: 0;
+  right: 0;   
   width: 100%;
+  height: 3em;
 }
 
 .post-meta {
@@ -273,6 +263,20 @@ html[xmlns] .clearfix {
  /* MEDIA QUERIES */
 
 @media only screen and (max-width: 800px) {
+
+header {
+  position: relative;
+}
+header nav {
+  flex-direction: column;
+  text-align: center;
+}
+
+header nav a {
+  display: block;
+  margin: 5px;
+  padding: 5px;
+}
 .homepage {
   background: url(bg-m.jpg);
   background-size: cover;
